--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,9 @@ main {
 header,
 footer,
 main {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #div-1,
@@ -137,7 +139,6 @@ main {
   color: #fff;
   line-height: 1.5em;
   font-size: 1.25em;
-  height: auto;
 }
 
 .wrapper span {
@@ -146,11 +147,16 @@ main {
 }
 
 .flex-container {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center, and set flex-flow to row wrap*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .flex-items {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
   line-height: 1.5em;
   font-size: 1.6em;
